--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IA | Official Website</title>
+    <title>IA | Official Website - Home</title>
     <meta name="description"
         content="dj and producer with an emphasis on house and urban genres, nationality argentina, buenos aires">
     <meta name="keywords" content="DJ, Producer, Music">
