--- a/pages/fondos.html
+++ b/pages/fondos.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>IA | Official Website</title>
+  <title>IA | Official Website - Photos</title>
   <meta name="description" content="Nuevos fondos/wallpaper de la IA">
   <meta name="keywords" content="DJ, Producer, Music">
   <link rel="shortcut icon" href="../media/LOGO.png" type="image/x-icon" />
