--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IA | Official Website</title>
+    <title>IA | Official Website - Videos</title>
     <meta name="description" content="Videos y ultimos lanzaminetos del artista">
     <meta name="keywords" content="DJ, Producer, Music">
     <link rel="shortcut icon" href="../media/LOGO.png" type="image/x-icon" />
