--- a/pages/fondos.html
+++ b/pages/fondos.html
@@ -108,6 +108,17 @@
     </div>
   </section>
 
+  <section class="row">
+    <div class="row col-md-6 offset-md-3">
+      <video width="500px" height="500px" src="../media/formato-photos-2023.mp4" class="object-fit-scale" autoplay muted
+        loop></video>
+
+
+    </div>
+
+  </section>
+
+
 
 
   <footer class="bg-dark py-3 mt-5 ">
